starter/network.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Udagram Network Resources

Parameters:
  VpcCidrBlock:
    Type: String
    Description: CIDR block for VPC
    Default: "10.0.0.0/16"

  PublicSubnet1aCidrBlock:
    Type: String
    Description: CIDR block for the first public subnet in us-east-1a
    Default: "10.0.0.0/24"

  PrivateSubnet1aCidrBlock:
    Type: String
    Description: CIDR block for the first private subnet in us-east-1a
    Default: "10.0.1.0/24"

  PublicSubnet1bCidrBlock:
    Type: String
    Description: CIDR block for the first public subnet in us-east-1b
    Default: "10.0.2.0/24"

  PrivateSubnet1bCidrBlock:
    Type: String
    Description: CIDR block for the first private subnet in us-east-1b
    Default: "10.0.3.0/24"

  VPCName:
    Type: String
    Description: Name tag for the VPC
    Default: "Project-2-VPC"

  Environment:
    Type: String
    Description: Environment tag
    Default: "Project-2-Environment"

Resources:
  # VPCs and Subnets
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment

  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1aCidrBlock
      AvailabilityZone: us-east-1a
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment

  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1aCidrBlock
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment

  PublicSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1bCidrBlock
      AvailabilityZone: us-east-1b
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment

  PrivateSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1bCidrBlock
      AvailabilityZone: us-east-1b
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment
  # GATEWAYS
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Tags:
      - Key: Name
        Value: !Ref VPCName
      - Key: Environment
        Value: !Ref Environment

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  ElasticIP1a:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc

  ElasticIP1b:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc

  NatGateway1a:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIP1a.AllocationId
      SubnetId: !Ref PublicSubnet1a
    Tags:
      - Key: Name
        Value: !Ref VPCName
      - Key: Environment
        Value: !Ref Environment

  NatGateway1b:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt ElasticIP1b.AllocationId
      SubnetId: !Ref PublicSubnet1b
    Tags:
      - Key: Name
        Value: !Ref VPCName
      - Key: Environment
        Value: !Ref Environment

  # Public ROUTING
  PublicRouteTable1a:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment Public Routes (AZ1a)

  PublicRouteTable1b:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment Public Routes (AZ1b)

  PublicSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1a
      RouteTableId: !Ref PublicRouteTable1a

  PublicSubnet1bRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1b
      RouteTableId: !Ref PublicRouteTable1b

  PublicRoute1a:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable1a
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicRoute1b:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable1b
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Private Routing
  PrivateRouteTable1a:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment Private Routes (AZ1a)

  PrivateRouteTable1b:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Ref VPCName
        - Key: Environment
          Value: !Ref Environment Private Routes (AZ1b)

  PrivateSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1a
      RouteTableId: !Ref PrivateRouteTable1a

  PrivateSubnet1bRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1b
      RouteTableId: !Ref PrivateRouteTable1b

  PrivateRoute1a:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1a
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1a

  PrivateRoute1b:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1b
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1b

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-VPCId"

  PublicSubnet1aId:
    Description: Public Subnet 1a ID
    Value: !Ref PublicSubnet1a
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PublicSubnet1aId"

  PrivateSubnet1aId:
    Description: Private Subnet 1a ID
    Value: !Ref PrivateSubnet1a
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PrivateSubnet1aId"

  PublicSubnet1bId:
    Description: Public Subnet 1b ID
    Value: !Ref PublicSubnet1b
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PublicSubnet1bId"

  PrivateSubnet1bId:
    Description: Private Subnet 1b ID
    Value: !Ref PrivateSubnet1b
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-PrivateSubnet1bId"
